Refactor reflection path filtering to use collect() instead of toList() for compatibility with Java 11